// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Header /> should not render the last name 1`] = `
<body>
  .c0 {
  max-width: 800px;
  margin: 16px auto;
}

.c1 {
  margin: 16px 0 40px 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c1 nav {
  margin-top: 10px;
  display: none;
}

.c3 {
  font-size: 15vw;
  font-weight: 700;
  text-transform: lowercase;
}

.c2 {
  -webkit-text-decoration: none;
  text-decoration: none;
  box-shadow: none;
}

.c2:focus {
  outline: none;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

@media (min-width:760px) {
  .c1 nav {
    display: block;
  }
}

@media (min-width:760px) {
  .c1 {
    margin: 100px 0 0px 0;
  }
}

@media (min-width:760px) {
  .c3 {
    font-size: 100px;
  }
}

<div>
    <section
      class="c0"
    >
      <main>
        <header
          class="c1"
        >
          <a
            class="c2"
            href="/"
          >
            <span
              class="c3"
            >
              John
            </span>
          </a>
          <div
            class="c4"
          >
            <p>
              ThemeSwitcher
            </p>
          </div>
        </header>
      </main>
    </section>
  </div>
</body>
`;

exports[`<Header /> should render properly 1`] = `
.c0 {
  max-width: 800px;
  margin: 16px auto;
}

.c1 {
  margin: 16px 0 40px 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c1 nav {
  margin-top: 10px;
  display: none;
}

.c3 {
  font-size: 15vw;
  font-weight: 700;
  text-transform: lowercase;
}

.c2 {
  -webkit-text-decoration: none;
  text-decoration: none;
  box-shadow: none;
}

.c2:focus {
  outline: none;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

@media (min-width:760px) {
  .c1 nav {
    display: block;
  }
}

@media (min-width:760px) {
  .c1 {
    margin: 100px 0 0px 0;
  }
}

@media (min-width:760px) {
  .c3 {
    font-size: 100px;
  }
}

<body>
  <div>
    <section
      class="c0"
    >
      <main>
        <header
          class="c1"
        >
          <a
            class="c2"
            href="/"
          >
            <span
              class="c3"
            >
              John
              <span
                class=""
                data-testid="header-lastname"
              >
                D
                .
              </span>
            </span>
          </a>
          <div
            class="c4"
          >
            <p>
              ThemeSwitcher
            </p>
          </div>
        </header>
      </main>
    </section>
  </div>
</body>
`;
